ビルド設定を作成

--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   },
   "homepage": "https://github.com/smallgeek/pinterest-slideshow#readme",
   "dependencies": {
+    "webextension-polyfill-ts": "^0.19.0"
+  },
+  "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/webpack": "^4.41.21",
     "copy-webpack-plugin": "^6.0.3",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
-    "webextension-polyfill-ts": "^0.19.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
