前のピンから自動で遷移された場合のタイマー継続処理を追加

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,8 @@
   "manifest_version": 2,
   "version": "1.0",
   "permissions": [
-    "https://*.pinterest.jp/"
+    "https://*.pinterest.jp/",
+    "storage"
   ],
   "browser_action": {
     "default_icon": "128.png",
@@ -11,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.pinterest.jp/*"],
+      "matches": ["https://*.pinterest.jp/pin/*"],
       "css": ["style.css"],
       "js": ["content_scripts.js"]
     }
