ボタンが表示されない場合があった不具合を修正

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*.pinterest.jp/pin/*"],
+      "matches": ["https://*.pinterest.jp/*"],
       "css": ["style.css"],
       "js": ["content_scripts.js"]
     }
