--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pinterest Slideshow",
+  "name": "Pinterest Drawing",
   "manifest_version": 2,
   "version": "1.0",
   "permissions": [
@@ -8,7 +8,7 @@
   ],
   "browser_action": {
     "default_icon": "128.png",
-    "default_title": "Pinterest Slideshow"
+    "default_title": "Pinterest Drawing"
   },
   "content_scripts": [
     {
