--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "pinterest-drawing",
   "version": "1.0.0",
   "description": "Pinterest を使用して絵の練習をするための Google Chrome 拡張",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:content": "vue-cli-service build --no-clean src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -17,15 +16,19 @@
   },
   "homepage": "https://github.com/smallgeek/pinterest-drawing#readme",
   "dependencies": {
+    "vue": "^2.6.11",
     "webextension-polyfill-ts": "^0.19.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/webpack": "^4.41.21",
+    "@vue/cli-plugin-typescript": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "copy-webpack-plugin": "^6.0.3",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
