--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,9 +12,13 @@
   },
   "content_scripts": [
     {
+      "all_frames": true,
       "matches": ["https://*.pinterest.jp/*"],
       "css": ["style.css"],
-      "js": ["content_scripts.js"]
+      "js": [
+        "js/chunk-vendors.js",
+        "js/app.js"
+      ]
     }
   ],
   "icons": {
