--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/smallgeek/pinterest-drawing#readme",
   "dependencies": {
+    "moment": "^2.27.0",
     "vue": "^2.6.11",
     "webextension-polyfill-ts": "^0.19.0"
   },
