--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "dependencies": {
     "moment": "^2.27.0",
     "vue": "^2.6.11",
+    "vuex": "^3.5.1",
+    "vuex-webextensions": "^1.3.0",
     "webextension-polyfill-ts": "^0.19.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/webpack": "^4.41.21",
     "@vue/cli-plugin-typescript": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "copy-webpack-plugin": "^6.0.3",
     "ts-loader": "^8.0.0",
