ボタンのデザインをPinterest標準に合わせた

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
     {
       "all_frames": true,
       "matches": ["https://*.pinterest.jp/*"],
-      "css": ["style.css"],
+      "css": ["css/app.css"],
       "js": [
         "js/chunk-vendors.js",
         "js/app.js"
