残り時間を7セグメント表示にした

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "moment": "^2.27.0",
     "vue": "^2.6.11",
+    "vue-seven-segment-display": "^2.1.0",
     "vuex": "^3.5.1",
     "vuex-webextensions": "^1.3.0",
     "webextension-polyfill-ts": "^0.19.0"
