--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "moment": "^2.27.0",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-seven-segment-display": "^2.1.0",
     "vuex": "^3.5.1",
     "vuex-webextensions": "^1.3.0",
