--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
   "browser_action": {
     "default_icon": "128.png",
     "default_title": "Pinterest Drawing",
-    "default_popup": "popup/popup.html"
+    "default_popup": "popup.html"
   },
   "content_scripts": [
     {
