設定画面で指定した切り替え間隔が反映されるように変更

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,12 @@
     "default_title": "Pinterest Drawing",
     "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": [
+      "js/chunk-vendors.js",
+      "js/background.js"
+    ]
+  },
   "content_scripts": [
     {
       "all_frames": true,
