--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "copy-webpack-plugin": "^6.0.3",
+    "node-forge": "^0.10.0",
     "ts-loader": "^8.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.6",
